--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
+    <!--Font Awesome-->
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.css"
+    />
+    <!--Bootstrap social-->
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
+    <!--External style sheet-->
     <link rel="stylesheet" href="css/style.css" />
     <title>Ristorante Con Fusion</title>
   </head>
@@ -32,14 +43,24 @@
         <div class="collapse navbar-collapse" id="Navbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="#" class="nav-link">Home</a>
+              <a href="#" class="nav-link"
+                ><span class="fa fa-home"></span> Home</a
+              >
             </li>
             <li class="nav-item">
-              <a href="./aboutus.html" class="nav-link">About</a>
+              <a href="./aboutus.html" class="nav-link"
+                ><span class="fa fa-info"> About</span></a
+              >
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Menu</a></li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Contact Us</a>
+              <a href="#" class="nav-link"
+                ><span class="fa fa-list"></span> Menu</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link"
+                ><span class="fa fa-address-card"></span> Contact Us</a
+              >
             </li>
           </ul>
         </div>
@@ -126,19 +147,43 @@
               121, Clear Water Bay Road<br />
               Clear Water Bay, Kowloon<br />
               HONG KONG<br />
-              Tel.: +852 1234 5678<br />
-              Fax: +852 8765 4321<br />
-              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+              <i class="fa fa-phone fa-lg"></i> :+852 1234 5678<br />
+              <i class="fa fa-fax fa-lg"></i> :+852 8765 4321<br />
+              <i class="fa fa-envelope fa-lg"></i>
+              <a href="mailto:confusion@food.net"> :confusion@food.net</a>
             </address>
           </div>
+          <!--to make the icons as bootstrap social-->
           <div class="col-12 col-sm-4 align-self-center">
             <div class="text-center">
-              <a href="http://google.com/+">Google+</a>
-              <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-              <a href="http://www.linkedin.com/in/">LinkedIn</a>
-              <a href="http://twitter.com/">Twitter</a>
-              <a href="http://youtube.com/">YouTube</a>
-              <a href="mailto:">Mail</a>
+              <a
+                class="btn btn-social-icon btn-google"
+                href="http://google.com/+"
+                ><i class="fa fa-google-plus fa-lg"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-facebook"
+                href="http://www.facebook.com/profile.php?id="
+                ><i class="fa fa-facebook fa-lg"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-linkedin"
+                href="http://www.linkedin.com/in/"
+                ><i class="fa fa-linkedin fa-lg"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-twitter"
+                href="http://twitter.com/"
+                ><i class="fa fa-twitter fa-lg"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-google"
+                href="http://youtube.com/"
+                ><i class="fa fa-youtube fa-lg"></i
+              ></a>
+              <a class="btn btn-social-icon" href="mailto:"
+                ><i class="fa fa-envelope fa-lg"></i
+              ></a>
             </div>
           </div>
         </div>
