--- a/aboutus.html
+++ b/aboutus.html
@@ -60,7 +60,7 @@
               >
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link"
+              <a href="./contactus.html" class="nav-link"
                 ><span class="fa fa-address-card"></span> Contact Us</a
               >
             </li>
