--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               >
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link"
+              <a href="./contactus.html" class="nav-link"
                 ><span class="fa fa-address-card"></span> Contact Us</a
               >
             </li>
