--- a/aboutus.html
+++ b/aboutus.html
@@ -79,8 +79,8 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm"></div>
-        </div>
+          <div class="col-12 col-sm">
+           
       </div>
     </header>
 
@@ -114,7 +114,38 @@
             cuisines in a pan.
           </p>
         </div>
-        <div></div>
+        <div class="col-sm">
+          <div class="card">
+            <h3 class="card-header bg-primary text-white">Facts At A Glance</h3>
+            <div class="card-body">
+              <dl class="row">
+                <dt class="col-6">Started</dt>
+                <dd class="col-6">3 Feb. 2013</dd>
+                <dt class="col-6">Major Stake Holder</dt>
+                <dd class="col-6">HK Fine Foods Inc.</dd>
+                <dt class="col-6">Last Year's Turnover</dt>
+                <dd class="col-6">$1,250,375</dd>
+                <dt class="col-6">Employees</dt>
+                <dd class="col-6">40</dd>
+            </dl>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-12">
+          <div class="card card-body bg-light">
+             <blockquote class="blockquote">
+               <p class="mb-0">I am going to save this place on my Maps so that I can come here 
+                 just by swiping up
+               </p>
+               <footer class="blockquote-footer">Yogi Berra
+                 <cite title="Source Title">The Wit and Wisdom of Yogi Berr,
+                   D.diversion books,2017
+                 </cite>
+               </footer>
+             </blockquote>
+          </div>
+        </div>
       </div>
 
       <div class="row row-content align-items-center">
@@ -163,6 +194,50 @@
             >
           </p>
         </div>
+      </div>
+      <div class="row row-content">
+        <div class="col-12 col-sm-9">
+          <h2>Facts &amp; Figures</h2>
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead class="thead-dark">
+                <tr>
+                  <th>&nbsp;</th>
+                  <th>2017</th>
+                  <th>2018</th>
+                  <th>2019</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th>Employees</th>
+                  <td>15</td>
+                  <td>30</td>
+                  <td>40</td>
+                </tr>
+                <tr>
+                  <th>Guests Served</th>
+                  <td>15000</td>
+                  <td>45000</td>
+                  <td>100,000</td>
+                </tr>
+                <tr>
+                  <th>Special Events</th>
+                  <td>3</td>
+                  <td>20</td>
+                  <td>45</td>
+                </tr>
+                <tr>
+                  <th>Annual Turnover</th>
+                  <td>$251,325</td>
+                  <td>$1,250,375</td>
+                  <td>~$3,000,000</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="col-12 col-sm-3"></div>
       </div>
     </div>
 
