--- a/contactus.html
+++ b/contactus.html
@@ -239,7 +239,7 @@
             </div>
             <div class="form-group row">
               <div class="offset-md-2 col-md-10">
-                <button type="submit" class="btn btn-success">
+                <button type="submit" class="btn btn-primary">
                   Send Feedback
                 </button>
               </div>
