--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a href="./index.html" class="navbar-brand mr-auto"
-          >Ristorante Con Fusion</a
+          ><img src="img/logo.png" alt="logo" height="50" width="61"></a
         >
         <div class="collapse navbar-collapse" id="Navbar">
           <ul class="navbar-nav ml-auto">
@@ -79,8 +79,8 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm">
-           
+          <div class="col-12 col-sm offset-sm-3">
+            <img src="img/logo.png" alt="logo" class="img-fluid" />
       </div>
     </header>
 
