--- a/contactus.html
+++ b/contactus.html
@@ -37,7 +37,9 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand mr-auto" href="#">Ristorante Con Fusion</a>
+        <a class="navbar-brand mr-auto" href="#"
+          ><img src="img/logo.png" alt="logo" height="50" width="61"
+        /></a>
         <div class="collapse navbar-collapse" id="Navbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -76,7 +78,9 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm"></div>
+          <div class="col-12 col-sm offset-sm-3">
+            <img src="img/logo.png" alt="logo" class="img-fluid" />
+          </div>
         </div>
       </div>
     </header>
