--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="#" class="navbar-brand mr-auto">Ristorante Con Fusion</a>
+        <a href="#" class="navbar-brand mr-auto"
+          ><img src="img/logo.png" alt="logo" height="50" width="61"
+        /></a>
         <div class="collapse navbar-collapse" id="Navbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
@@ -77,7 +79,9 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm"></div>
+          <div class="col-12 col-sm offset-sm-3">
+            <img src="img/logo.png" alt="logo" class="img-fluid" />
+          </div>
         </div>
       </div>
     </header>
@@ -88,12 +92,21 @@
           <h3>Our Lipsmacking Culinary Creations</h3>
         </div>
         <div class="col col-sm order-sm-first col-md">
-          <h2>Uthappizza</h2>
-          <p>
-            A unique combination of Indian Uthappam (pancake) and Italian pizza,
-            topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia
-            onion, Guntur chillies and Buffalo Paneer.
-          </p>
+          <div class="media">
+            <img
+              src="img/uthappizza.png"
+              alt="uthappizza"
+              class="d-flex mr-3 img-thumbnail align-self-center"
+            />
+            <div class="media-body">
+              <h2 class="mt-0">Uthappizza</h2>
+              <p class="d-none d-sm-block">
+                A unique combination of Indian Uthappam (pancake) and Italian
+                pizza, topped with Cerignola olives, ripe vine cherry tomatoes,
+                Vidalia onion, Guntur chillies and Buffalo Paneer.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -102,13 +115,22 @@
           <h3>This Month's Promotions</h3>
         </div>
         <div class="col col-sm col-md">
-          <h2>Weekend Grand Buffet</h2>
-          <p>
-            Featuring mouthwatering combinations with a choice of five different
-            salads, six enticing appetizers, six main entrees and five choicest
-            desserts. Free flowing bubbly and soft drinks. All for just $19.99
-            per person
-          </p>
+          <div class="media">
+            <div class="media-body">
+              <h2 class="mt-0">Weekend Grand Buffet</h2>
+              <p class="d-none d-sm-block">
+                Featuring mouthwatering combinations with a choice of five
+                different salads, six enticing appetizers, six main entrees and
+                five choicest desserts. Free flowing bubbly and soft drinks. All
+                for just $19.99 per person
+              </p>
+            </div>
+            <img
+              src="img/buffet.png"
+              alt="buffet"
+              class="d-flex ml-3 img-thumbnail align-self-center"
+            />
+          </div>
         </div>
       </div>
 
@@ -117,14 +139,23 @@
           <h3>Meet our Culinary Specialists</h3>
         </div>
         <div class="col col-sm order-sm-first col-md">
-          <h2>Alberto Somayya</h2>
-          <h4>Executive Chef</h4>
-          <p>
-            Award winning three-star Michelin chef with wide International
-            experience having worked closely with whos-who in the culinary
-            world, he specializes in creating mouthwatering Indo-Italian fusion
-            experiences.
-          </p>
+          <div class="media">
+            <img
+              src="img/alberto.png"
+              alt="alberto"
+              class="d-flex mr-3 img-thumbnail align-self-center"
+            />
+            <div class="media-body">
+              <h2 class="mt-0">Alberto Somayya</h2>
+              <h4>Executive Chef</h4>
+              <p class="d-none d-sm-block">
+                Award winning three-star Michelin chef with wide International
+                experience having worked closely with whos-who in the culinary
+                world, he specializes in creating mouthwatering Indo-Italian
+                fusion experiences.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
