--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--Assignment 2 - Task 1 starts at line 175-->
+<!--Assignment 2 - Task 2 starts at line 130 -->
+<!--Assignment 2 - Task 3 starts at line 91-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -79,8 +83,13 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm offset-sm-3">
+          <div class="col-12 col-sm-3 align-self-center">
             <img src="img/logo.png" alt="logo" class="img-fluid" />
+          </div>
+          <div class="col-12 col-sm-3 align-self-center">
+            <a href="#reservations" type="button" class="btn btn-lg btn-warning"
+              >Reserve Table</a
+            >
           </div>
         </div>
       </div>
@@ -120,7 +129,9 @@
         <div class="col col-sm col-md">
           <div class="media">
             <div class="media-body">
-              <h2 class="mt-0">Weekend Grand Buffet</h2>
+              <h2 class="mt-0">
+                Weekend Grand Buffet <span class="badge badge-danger">NEW</span>
+              </h2>
               <p class="d-none d-sm-block">
                 Featuring mouthwatering combinations with a choice of five
                 different salads, six enticing appetizers, six main entrees and
@@ -162,6 +173,85 @@
         </div>
       </div>
     </div>
+    <div class="row row-content align-items-center"  id="reservations">
+      <div class="col-12 col-sm-8 offset-sm-2">
+        <div class="card">
+          <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+          <div class="card-body">
+            <form>
+              <div class="form-group row">
+                  <label class="col-12 col-sm-2">Number of Guests</label>
+                  <div class="col-12 col-sm-10">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" 
+                      type="radio" 
+                      name="radioOptions" 
+                      id="radio1" 
+                      value="one">
+                      <label class="form-check-label" for="radio1">1</label>
+                   </div>
+                   <div class="form-check form-check-inline">
+                     <input class="form-check-input" 
+                     type="radio" 
+                     name="radioOptions" 
+                     id="radio2" 
+                     value="two">
+                     <label class="form-check-label" for="radio2">2</label>
+                   </div>
+                   <div class="form-check form-check-inline">
+                     <input class="form-check-input" 
+                     type="radio" 
+                     name="radioOptions" 
+                     id="radio3" 
+                     value="three">
+                     <label class="form-check-label" for="radio3">3</label>
+                   </div>
+                   <div class="form-check form-check-inline">
+                     <input class="form-check-input" 
+                     type="radio" 
+                     name="radioOptions" 
+                     id="radio4" 
+                     value="four">
+                     <label class="form-check-label" for="radio4">4</label>
+                   </div>
+                   <div class="form-check form-check-inline">
+                     <input class="form-check-input" 
+                     type="radio" 
+                     name="radioOptions" 
+                     id="radio5" 
+                     value="five">
+                     <label class="form-check-label" for="radio5">5</label>
+                   </div>
+                   <div class="form-check form-check-inline">
+                     <input class="form-check-input" 
+                     type="radio" 
+                     name="radioOptions" 
+                     id="radio6" 
+                     value="six">
+                     <label class="form-check-label" for="radio6">6</label>
+                   </div>
+                  </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                <div class="col-12 col-sm-4">
+                  <input type="text" class="form-control" id="date" placeholder="Date">
+                </div>
+                <div class="col-12 col-sm-4">
+                  <input type="text" class="form-control" id="time" placeholder="Time">
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-12 col-sm-8 offset-sm-2">
+                  <button type="submit" class="btn btn-primary">Reserve</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
 
     <footer class="footer">
       <div class="container">
