--- a/aboutus.html
+++ b/aboutus.html
@@ -151,8 +151,25 @@
       <div class="row row-content align-items-center">
         <div class="col-12">
           <h2>Corporate Leadership</h2>
-          <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
-          <p class="d-none d-sm-block">
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a href="#peter" class="nav-link active" role="tab" data-toggle="tab">Peter Pan,CEO</a>
+            </li>
+            <li class="nav-item">
+              <a href="#dhana" class="nav-link" role="tab" data-toggle="tab">Danny Witherspoon,CFO
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#agumbe" class="nav-link" role="tab" data-toggle="tab">Agumbe Tang,CTO</a>
+            </li>
+            <li class="nav-item">
+              <a href="#alberto" class="nav-link" role="tab" data-toggle="tab">Alberto Somayya,Exec. Chef</a>
+            </li>
+          </ul>
+          <div class="tab-content">
+            <div role="tabpanel" class="tab-pane fade show active" id="peter">
+              <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
+              <p class="d-none d-sm-block">
             Our CEO, Peter, credits his hardworking East Asian immigrant parents
             who undertook the arduous journey to the shores of America with the
             intention of giving their children the best future. His mother's
@@ -163,8 +180,10 @@
             fusion cuisines to this restaurant, pioneering cross-cultural
             culinary connections.
           </p>
-          <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
-          <p class="d-none d-sm-block">
+        </div>
+          <div role="tabpanel" class="tab-pane fade" id="dhana">
+            <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
+            <p class="d-none d-sm-block">
             Our CFO, Danny, as he is affectionately referred to by his
             colleagues, comes from a long established family tradition in
             farming and produce. His experiences growing up on a farm in the
@@ -174,16 +193,20 @@
               >Everything that runs, wins, and everything that stays, pays!</em
             >
           </p>
-          <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
-          <p class="d-none d-sm-block">
+        </div>
+          <div role="tabpanel" class="tab-pane fade" id="agumbe">
+            <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
+            <p class="d-none d-sm-block">
             Blessed with the most discerning gustatory sense, Agumbe, our CTO,
             personally ensures that every dish that we serve meets his exacting
             tastes. Our chefs dread the tongue lashing that ensues if their dish
             does not meet his exacting standards. He lives by his motto,
             <em>You click only if you survive my lick.</em>
           </p>
-          <h3>Alberto Somayya <small>Executive Chef</small></h3>
-          <p class="d-none d-sm-block">
+        </div>
+          <div role="tabpanel" class="tab-pane fade" id="alberto">
+            <h3>Alberto Somayya <small>Executive Chef</small></h3>
+            <p class="d-none d-sm-block">
             Award winning three-star Michelin chef with wide International
             experience having worked closely with whos-who in the culinary
             world, he specializes in creating mouthwatering Indo-Italian fusion
@@ -195,6 +218,8 @@
           </p>
         </div>
       </div>
+    </div>
+  </div>
       <div class="row row-content">
         <div class="col-12 col-sm-9">
           <h2>Facts &amp; Figures</h2>
