--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           ><img src="img/logo.png" alt="logo" height="50" width="61"
         /></a>
         <div class="collapse navbar-collapse" id="Navbar">
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav">
             <li class="nav-item active">
               <a href="#" class="nav-link"
                 ><span class="fa fa-home"></span> Home</a
@@ -69,9 +69,52 @@
               >
             </li>
           </ul>
+          <span class="navbar-text ml-auto">
+            <a data-toggle="modal" data-target="#loginModal">
+              <span class="fa fa-sign-in"></span>Login
+            </a>
+
+          </span>
         </div>
       </div>
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+      <div class="modal-dialog" role="content">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Login</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group row">
+                <div class="col-sm-4">
+                  <label for="email" class="col-form-label sr-only">Email</label>
+                    <input type="email" name="email" id="email" class="form-control form-control-sm mr-1" placeholder="Enter email">
+                </div>
+                <div class="col-sm-4">
+                  <label for="password" class="col-form-label sr-only">Password</label>
+                    <input type="password" name="password" id="password" class="form-control form-control-sm mr-1" placeholder="Password">
+                </div>
+                <div class="col-sm-auto">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox">
+                    <label class="form-check-label">Remember Me</label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <button type="button" data-dismiss="modal" class="btn btn-secondary btn-sm ml-auto">Cancel</button>
+                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign In</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
     <header class="jumbotron">
       <div class="container">
         <div class="row row-header">
@@ -87,9 +130,9 @@
             <img src="img/logo.png" alt="logo" class="img-fluid" />
           </div>
           <div class="col-12 col-sm-3 align-self-center">
-            <a href="#reservations" type="button" class="btn btn-lg btn-warning"
-              >Reserve Table</a
-            >
+            <a role="button" class="btn btn-block btn-lg btn-warning"
+                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
+                        data-placement="bottom" href="#reservations">Reserve Table</a>
           </div>
         </div>
       </div>
@@ -321,5 +364,10 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+      $(document).ready(function(){
+          $('[data-toggle="tooltip"]').tooltip();
+      });
+  </script>
   </body>
 </html>
