--- a/index.html
+++ b/index.html
@@ -406,6 +406,14 @@
             >
               <span class="carousel-control-next-icon"></span>
             </a>
+            <div class="btn-group" id="carouselButton">
+              <button class="btn btn-danger btn-sm" id="carousel-pause">
+                <span class="fa fa-pause"></span>
+              </button>
+              <button class="btn btn-danger btn-sm" id="carousel-play">
+                <span class="fa fa-play"></span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -555,5 +563,16 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $("#myCarousel").carousel({ interval: 1000 });
+        $("#carousel-pause").click(function () {
+          $("#myCarousel").carousel("pause");
+        });
+        $("#carousel-play").click(function () {
+          $("#myCarousel").carousel("cycle");
+        });
+      });
+    </script>
   </body>
 </html>
