--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
       href="node_modules/bootstrap-social/bootstrap-social.css"
     />
     <!--External style sheet-->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Ristorante Con Fusion: About Us</title>
   </head>
 
